--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,6 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - REACT_APP_API_BASE_URL=http://192.168.1.38:8000/api/
+      - REACT_APP_API_BASE_URL=http://localhost:8000/api/
     depends_on:
       - app
